--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,145 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* -----------> Agrego codigo responsive aca <----------- */
-/* Primero se genera todo el css para mobile y luego la version de escritorio se codifica dentro del media query */
+.auth-background {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightblue;
+    --black-opacity: 0.4;
+    background-image: linear-gradient(rgba(0, 0, 0, var(--black-opacity)), rgba(0, 0, 0, var(--black-opacity))), url("../assets/recipe-background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.auth-content {
+    width: 400px;
+    height: 500px;
+    background-color: #FFF;
+    border-radius: 20px;
+}
+
+.auth-content form {
+    padding: 50px 0;
+}
+
+.auth-content h1 { font-weight: 700; }
+
+.auth-content .input-content {
+    position: relative;
+}
+
+.auth-content .input-content input {
+    width: 100%;
+    height: 40px;
+    padding: 15px;
+    border: 2px solid var(--black-color);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.auth-content .input-content .placeholder-label {
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.auth-content .input-content .label-text {
+    font-size: 15px;
+    background-color: transparent;
+    color: var(--black-color);
+    transform: translate(0);
+    transition: transform 0.15s ease-out, font-size 0.15s ease-out, color 0.15s ease-out;
+}
+
+.auth-content .input-content input, .placeholder-label {
+    font-size: 15px;
+}
+
+.auth-content .input-content input:focus {
+    outline: none;
+}
+
+.auth-content .input-content input:focus + .placeholder-label .label-text, :not(input[value=""]) + .placeholder-label .label-text {
+    font-size: 14px;
+    color: var(--black-color);
+    background-color: #FFF;
+    transform: translate(0, -100%);
+}
+
+.auth-content .input-content input:focus + .placeholder-label .label-text {
+    color: var(--black-color);
+}
+
+.auth-content .register-link {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.auth-content .register-link p {
+    margin: 0;
+    letter-spacing: 1px;
+}
+
+.auth-content .button-content {
+    width: 100%;
+}
+
+.auth-content .button-content .btn-primary {
+    width: 100%;
+    height: 50px;
+    border: none;
+    background-color: var(--main-color);
+    transition: all .3s;
+}
+
+.auth-content .form-check-label {
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.auth-content .form-switch .form-check-input, .form-check-label {
+  cursor: pointer;
+  box-shadow: none;
+}
+
+#navbar-component {
+    background-color: var(--main-color);
+    padding: 5px 20px;
+}
+
+#navbar-component .navbar-brand {
+    color: var(--white-color);
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+#navbar-component a {
+    color: var(--white-color);
+    letter-spacing: 1px;
+}
+
+#navbar-component .btn-secondary {
+    background-color: transparent;
+    border: none;
+    letter-spacing: 1px;
+}
+
+#navbar-component .dropdown-menu {
+    padding: 0;
+}
+
+#navbar-component .dropdown-item {
+    padding: 10px 20px;
+}
+#navbar-component .dropdown-item:hover {
+    color: var(--white-color);
+    background-color: var(--black-color);
+}
 
 @media (min-width: 950px) {
 
