--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body {
 
 .auth-content {
     width: 400px;
-    height: 500px;
+    min-height: 500px;
     background-color: #FFF;
     border-radius: 20px;
 }
@@ -39,6 +39,14 @@ body {
 }
 
 .auth-content h1 { font-weight: 700; }
+
+.auth-content form .errors-list {
+    list-style: none;
+    font-weight: 600;
+    font-size: 13px;
+    padding: 0;
+    margin: 0;
+}
 
 .auth-content .input-content {
     position: relative;
@@ -203,6 +211,27 @@ body {
     padding: 0;
 }
 
+#recipe .ingredients-list .ingredient-card {
+    width: 100%;
+    height: 50px;
+    background-color: transparent;
+    border: 1px solid var(--main-color);
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px auto;
+    padding: 0 35px;
+}
+
+#recipe .ingredients-list .ingredient-card span {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+#recipe .ingredients-list .ingredient-card i { font-size: 14px; }
+
 @media (min-width: 950px) {
 
     #recipe .recipe-wrapper {
@@ -218,6 +247,7 @@ body {
         margin: 0; 
     }
 
-    #recipe .ingredients-wrapper { text-align: center;}
+    #recipe .ingredients-wrapper { text-align: center; }
+    #recipe .ingredients-list .ingredient-card { width: 30%; }
 
 }
